# pravys-market-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
bot/: agent.py  markdown_to_html.py  observability.py  redis_store.py  state.py  streaming.py  tools.py
core/: backtest.py  canslim.py  config.py  daily_picks.py  digest_builder.py  digest_extras.py  distribution_days.py  fundamentals.py  gemini_client.py  nse_data.py  patterns.py  picks_cache.py  picks_orchestrator.py  portfolio.py  reasoning.py  rs_rating.py  screener.py  sector_indices.py  sell_signals.py  telegram_client.py  watchlist.py
jobs/: backtest_run.py  chatbot_poll.py  daily_picks_job.py  evening_recap.py  marketsmith_data.py  morning_pulse.py  weekly_portfolio_prompt.py  weekly_recap.py  weekly_top3.py
mcp-worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
scripts/: upload_playbook.py
state/: chatbot_state.json
tests/: test_agent.py  test_backtest.py  test_buffett_strategy.py  test_canslim.py  test_canslim_strategy.py  test_chatbot_poll.py  test_config.py  test_daily_picks.py  test_digest_builder.py  test_digest_extras.py  test_distribution_days.py  test_fundamentals.py  test_gemini_client.py  test_graham_strategy.py  test_lynch_strategy.py  test_magic_formula_strategy.py  test_markdown_to_html.py  test_marketsmith_data.py  test_nse_data.py  test_observability.py  test_patterns.py  test_picks_cache.py  test_portfolio.py  test_portfolio_commands.py  test_reasoning.py  test_redis_store.py  test_rs_rating.py  test_schloss_strategy.py  test_state.py  (+12 more)
(+53 files in other folders)
